--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,7 @@ import:
   version: ~4.2.0
 - package: github.com/go-ini/ini
   version: ~1.35.0
+- package: github.com/jinzhu/gorm
+  version: ~1.9.1
+- package: github.com/urfave/cli
+  version: ~1.20.0
