--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: ssq
+package: hiroki
 import:
 - package: github.com/go-sql-driver/mysql
   version: ~1.3.0
@@ -12,3 +12,5 @@ import:
   version: ~1.9.1
 - package: github.com/urfave/cli
   version: ~1.20.0
+- package: gopkg.in/cheggaaa/pb.v2
+  version: ~2.0.6
